--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^6.3.2"
     },
     "dependencies": {
-        "lodash": "^4.17.21"
+        "lodash": "^4.17.21",
+        "select2": "^4.1.0-rc.0"
     }
 }
